--- a/Unity/Packages/manifest.json
+++ b/Unity/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.gilzoide.gradle-wrapper": "https://github.com/gilzoide/unity-gradle-wrapper.git#1.0.5",
     "com.unity.ide.rider": "3.0.21",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
